--- a/inicio.html
+++ b/inicio.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -76,14 +76,14 @@
 
                   </div>
 
-                  <div><a class="btn btn-warning" href="https://mobirise.com">MORE</a></div>
+                  
               </div>
 
 
               
 
 
-              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 59%;">
+              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 62%;">
                   <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Tq7p44IA-1U?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
               </div>
 
