--- a/inicio.html
+++ b/inicio.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box5-2">COMO FUNCIONA</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="https://mobirise.com/">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box7-1">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">O QUE É AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="https://mobirise.com/">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -179,7 +179,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-h" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article" id="header3-h" style="background-color: rgb(247, 218, 100); padding-top: 40px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -188,6 +188,48 @@
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-l" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">O que é Ajuda Mútua?</h3>
+                
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-o" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><blockquote><p><span style="font-size: 1.09rem; line-height: 1.5;">Como o nome informa, é um sistema de ajuda entre membros, os quais são beneficiados com doações entre eles próprios, não cabendo qualquer tipo de investimento.</span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;">Basicamente o membro faz uma doação de livre e espontânea vontade, sem direito a qualquer tipo de retorno, por isso é uma doação.</span></p></blockquote><blockquote>No entanto como o membro faz parte de uma rede de doações é bem provável que ele próprio também venha a receber, isto é se a rede se expandir, o que não existe é uma garantia.</blockquote></div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-p" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">Ajuda Mútua é Crime?</h3>
+                <small class="mbr-section-subtitle">O que diz a Lei Nº 1521 de 26/12/1951 Art. 1º e 2º parágrafo IX?</small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content2-q" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><br><blockquote><p>A lei que rege o Crime Contra a Economia Popular é muito antiga, é do dia 26 de dezembro de 1951, mas que ainda está em vigor até hoje.</p><p><span style="font-size: 1.09rem; line-height: 1.5;">Será que a Ajuda Mutua é crime conforme a lei que é muito divulgada por alguns sites que é a Lei Nº 1521 de 26/12/1951 Art. 1º e 2º parágrafo IX que diz o texto:</span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;"><strong>IX – obter ou tentar obter ganhos ilícitos em detrimento do povo ou de número indeterminado de pessoas mediante especulações ou processos fraudulentos (“bola de neve”, “cadeias”, “pichardismo” e quaisquer outros equivalentes);</strong></span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;">Em primeiro lugar temos de admitir, naquela época não havia sequer internet, já por isso essa lei podia não ter qualquer efeito, mesmo assim podemos facilmente chegar à conclusão que ninguém é obrigado a efetuar a doação e ninguém garante receber absolutamente nada.</span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;">Por isso, se não houver fraude no sistema, como por exemplo várias contas de doações do mesmo titular (no caso de doações políticas), alteração da rede de cadastros e demais situações que de alguma forma não sejam transparentes eu não vejo aqui ninguém ganhando de forma ilícita mediante especulações ou processos fraudulentos.</span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;">Qualquer pessoa pode pedir uma doação, os políticos fazem isso, as igrejas o fazem, várias empresas tomam iniciativas do género, não existe crime quanto a isso.</span></p><p><span style="font-size: 1.09rem; line-height: 1.5;"><br></span><span style="font-size: 1.09rem; line-height: 1.5;">É pior pagar por um seguro contra incêndio que provavelmente você nunca vai usar e a empresa vai ganhar às suas custas do que a ajuda mútua.</span></p></blockquote></div>
+        </div>
+    </div>
+
 </section>
 
 <section class="mbr-section mbr-parallax-background" id="testimonials1-a" style="background-image: url(assets/images/mbr-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
@@ -349,8 +391,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-xs-center">
-                        <h3 class="mbr-section-title display-2">CONHEÇA ALGUNS ADMINISTRADORES</h3>
-                        <small class="mbr-section-subtitle">DO GRUPO DOA VS GANHA.</small>
+                        <h3 class="mbr-section-title display-2">CONVERSE COM ALGUM ADMINISTRADOR</h3>
+                        <small class="mbr-section-subtitle">ALGUNS ADMIN. DO GRUPO DOA VS GANHA.</small>
                     </div>
                 </div>
             </div>
