--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -218,7 +218,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>A única garantia que temos é que doaremos uma certa quantia para algum amigo que necessita. O retorno e garantia da ação que é também receber ajuda dos amigos da rede é trabalharmos em união, comprometimento, e lealdade Se assim for, com certeza é garantido..</p><p><br></p><p>Nós se unimos para isso, então se você esta comprometido a fazer a diferença junto conosco, vem com a gente.</p><p><br></p><p>Veja o que é possível você fazer com as doações que iráreceber:</p><p><br></p></div>
+            <div class="col-xs-12 lead"><p>A única garantia que temos é que doaremos uma certa quantia para algum amigo que necessita. O retorno e garantia da ação que é também receber ajuda dos amigos da rede é trabalharmos em união, comprometimento, e lealdade Se assim for, com certeza é garantido..</p><p><br></p><p>Nós se unimos para isso, então se você esta comprometido a fazer a diferença junto conosco, vem com a gente.</p><p><br></p><p>Veja o que é possível você fazer com as doações que irá receber:</p><p><br></p></div>
         </div>
     </div>
 
@@ -343,7 +343,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-l" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-l" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -364,7 +364,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-p" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-p" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -632,7 +632,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">DOE 10,00 REAIS E GANHE + DE 2 MIL<br><br>COM O PODER DA AJÚDUA MÚTUA...</h3>
+                <h3 class="mbr-section-title display-2">DOE 10,00 REAIS E GANHE + DE 2 MIL<br><br>COM O PODER DA AJUDA MÚTUA...</h3>
                 
                 
             </div>
