--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -95,6 +95,17 @@
 
 </section>
 
+<section class="mbr-section mbr-section__container article" id="header3-12" style="background-color: rgb(247, 218, 100); padding-top: 60px; padding-bottom: 60px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">QUER 9 REAIS DE PRESENTE?</h3>
+                <small class="mbr-section-subtitle">LEIA AS INFORMAÇÕES ATENTAMENTE</small>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header5-z" style="background-color: rgb(239, 239, 239);">
 
     
@@ -106,8 +117,8 @@
                 <div class="mbr-section col-md-10">
 
                     <h1 class="mbr-section-title display-1">VAMOS TE DAR UMA AJUDINHA</h1>
-                    <p class="mbr-section-lead lead">Ao se cadastrar no botão abaixo vamos te ajudar a conseguir 6 reais para você completar com o valor da doação, que é 10 reais para entrar na lista e receber os 2.200 reais certo? Faça seu cadastro no botão abaixo ou continue a leitura.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://mobirise.com">QUERO PARTICIPAR</a></div>
+                    <p class="mbr-section-lead lead">Ao se cadastrar no botão abaixo vamos te ajudar a conseguir 9 reais para você completar com o valor da doação, que é 10 reais para entrar na lista e receber os 2.200 reais certo?<br>Isso mesmo você vai completar com apenas 1 real apenas... <br>Clique em QUERO PARTICIPAR e obtenha mais informações...</p>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="https://mobirise.com">QUERO PARTICIPAR</a></div>
                 </div>
             </div>
         </div>
@@ -201,27 +212,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="mbr-section mbr-section__container article" id="header3-r" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">O RETORNO DA DOAÇÃO É GARANTIDO?</h3>
-                <small class="mbr-section-subtitle"><strong><br></strong><br><strong>NÃO.</strong></small>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mbr-section article mbr-section__container" id="content1-s" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>A única garantia que temos é que doaremos uma certa quantia para algum amigo que necessita. O retorno e garantia da ação que é também receber ajuda dos amigos da rede é trabalharmos em união, comprometimento, e lealdade Se assim for, com certeza é garantido..</p><p><br></p><p>Nós se unimos para isso, então se você esta comprometido a fazer a diferença junto conosco, vem com a gente.</p><p><br></p><p>Veja o que é possível você fazer com as doações que irá receber:</p><p><br></p></div>
-        </div>
-    </div>
-
 </section>
 
 <section class="mbr-cards mbr-section mbr-section-nopadding" id="features4-t" style="background-color: rgb(255, 255, 255);">
