--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -663,7 +663,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">COMPARTILHE</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="LL"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="LL"><i class="socicon socicon-facebook"></i></a> <a class="btn btn-social" title="Google+" target="_blank" href="LL"><i class="socicon socicon-googleplus"></i></a> <a class="btn btn-social" title="YouTube" target="_blank" href="LL"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="LL"><i class="socicon socicon-instagram"></i></a> <a class="btn btn-social" title="Pinterest" target="_blank" href="LL"><i class="socicon socicon-pinterest"></i></a>  <a class="btn btn-social" title="LinkedIn" target="_blank" href="LL"><i class="socicon socicon-linkedin"></i></a>   </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="LL"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="LL"><i class="socicon socicon-facebook"></i></a> <a class="btn btn-social" title="Google+" target="_blank" href="LL"><i class="socicon socicon-googleplus"></i></a> <a class="btn btn-social" title="YouTube" target="_blank" href="LL"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="LL"><i class="socicon socicon-instagram"></i></a>   <a class="btn btn-social" title="LinkedIn" target="_blank" href="LL"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
         </div>
     </div>
