--- a/inicio.html
+++ b/inicio.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box7-1">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">O QUE É AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="https://mobirise.com/">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box7-1">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">O QUE É AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-1" style="background-image: url(assets/images/mountains.jpg); padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -118,7 +118,7 @@
 
                     <h1 class="mbr-section-title display-1">VAMOS TE DAR UMA AJUDINHA</h1>
                     <p class="mbr-section-lead lead">Ao se cadastrar no botão abaixo vamos te ajudar a conseguir 9 reais para você completar com o valor da doação, que é 10 reais para entrar na lista e receber os 2.200 reais certo?<br>Isso mesmo você vai completar com apenas 1 real apenas... <br>Clique em QUERO PARTICIPAR e obtenha mais informações...</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="https://mobirise.com">QUERO PARTICIPAR</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></div>
                 </div>
             </div>
         </div>
@@ -305,7 +305,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-warning" href="https://mobirise.com">QUERO PARTICIPAR</a></div>
+                  <div><a class="btn btn-danger" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">&nbsp; &nbsp; &nbsp;QUERO PARTICIPAR &nbsp; &nbsp;&nbsp;</a></div>
               </div>
 
 
@@ -648,7 +648,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-warning" href="https://mobirise.com">QUERO PARTICIPAR</a></div>
+                    <div class="text-xs-center"><a class="btn btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">&nbsp; &nbsp;QUERO PARTICIPAR &nbsp;&nbsp;</a></div>
                 </div>
             </div>
 
