--- a/inicio.html
+++ b/inicio.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box7-1">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#header3-1r">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     
 
@@ -216,13 +216,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Serão 6 fases disponíveis para doação.</p><p>Inicalmente você &nbsp;irá doar 10,00 reais na primeira fase, e ganhará uma doação superior a 2.200,00 reais ao finalizar a fase de número 6.</p><p>Iremos te ajudar com 9,00 reais (por tempo limintado), pois conseguiremos este valor apenas para testar um Aplicativo.</p><p><br></p><p>Basicamente seguirá estes passos:</p><p><br></p><p>1° &nbsp;Passo: Você se cadastra neste site: http://www.doaeganha.vai.la</p><p>2° Passo: Passar por uma triagem de informações via Email e Site</p><p>3° Passo: Baixar Aplicativo para efetuar transferências de valores de forma segura</p><p>4° Passo: Doar para pessoa da vez, e entrar na lista de espera</p><p>5° Passo: Ajudar na divulgação do nosso grupo para que haja crescimento</p><p>6° Passo: Aguardar o recebimento das suas doações</p><p>7° Passo: Repetir o ciclo caso queira</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Serão 6 fases disponíveis para doação.</p><p>Inicalmente você &nbsp;irá doar 10,00 reais e entrara na fila na primeira fase, e ganhará uma doação superior a 2.200,00 reais ao finalizar a fase de número 6.&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">Iremos te ajudar com 9,00 reais para que você faça sua primeira doação (por tempo limintado), pois conseguiremos este valor apenas para testar um Aplicativo que você terá acesso em breve.</span></p><p><br></p><p>Basicamente seguirá estes passos:</p><p><br></p><p>1° &nbsp;Passo: Você se cadastra neste site: http://www.doaeganha.vai.la nos botões QUERO PARTICIPAR</p><p>2° Passo: Você irá passar por uma triagem de informações via Email e Site e Grupos Whatsapp</p><p>3° Passo: Baixar Aplicativo para efetuar transferências de valores de forma segura diretamente para os beneficiados</p><p>4° Passo: Doar para pessoa da vez, e entrar na lista de espera para receber doações também</p><p>5° Passo: Ajudar na divulgação do nosso grupo para que haja crescimento</p><p>6° Passo: Verificar e confirmar o recebimento das suas doações</p><p>7° Passo: Repetir o ciclo quantas vezes queira</p></blockquote></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-section" id="msg-box4-1t" style="background-color: rgb(126, 155, 159); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section" id="msg-box4-1t" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
