--- a/seja-bem-vindo.html
+++ b/seja-bem-vindo.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#msg-box7-1">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="inicio#header3-1r">COMO FUNCIONA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-l">AJUDA MÚTUA?</a></li><li class="nav-item"><a class="nav-link link" href="inicio#header3-p">AJUDA MÚTUA É CRIME?</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger" href="index.html#social-buttons4-d">COMPARTILHE</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
