--- a/compartilhar.html
+++ b/compartilhar.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-28" style="background-image: url(assets/images/facebook-saiba-como-publicar-posts-com-fundo-colorido-2000x1019.jpg); padding-top: 160px; padding-bottom: 160px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-28" style="background-image: url(assets/images/facebook-saiba-como-publicar-posts-com-fundo-colorido-2000x1019.jpg); padding-top: 160px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
