create github pages

--- a/confirme-seu-cadastro.html
+++ b/confirme-seu-cadastro.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -72,7 +72,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Parabéns pelo cadastro.&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">Falta apenas um passo.&nbsp;</span></p><p><span style="font-size: 1.07rem; line-height: 1.5;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5;">Confirme seu E-mail...</span></p><p><br></p><p>Enviamos uma mensagem de confirmação...</p><p> </p><p><br></p><p>Analise se esta na Caixa de Entrada e ou Caixa de Lixo Eletrônico, veja também Caixa de Promoções (no caso do Gmail).</p><p><br></p><p>O E-mail esta com o seguinte título: &nbsp;Doa VS Ganha - Confirme se E-mail</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Parabéns pelo cadastro.&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">Falta apenas um passo.&nbsp;</span></p><p><span style="font-size: 1.07rem; line-height: 1.5;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5;">Confirme seu E-mail...</span></p><p><br></p><p>Enviamos uma mensagem de confirmação...</p><p> </p><p><br></p><p>Analise se esta na Caixa de Entrada e ou Caixa de Lixo Eletrônico, veja também Caixa de Promoções (no caso do Gmail).</p><p><br></p><p>O E-mail esta com o seguinte título: &nbsp;Doa VS Ganha - Confirme seu E-mail</p></blockquote></div>
         </div>
     </div>
 
