create github pages

--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -171,7 +171,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Serão 6 fases disponíveis para você receber doações.</p><p>Inicalmente você &nbsp;irá doar 10,00 reais e entrara na fila na primeira fase, e ganhará uma doação superior a 8.000,00 reais ao finalizar a fase de número 6.&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">Inicialmente vamos te ajudar com 9,00 reais para que você faça sua primeira doação no valor de 10,00 reais (esse valor que iremos te ajudar é por tempo limitado), pois conseguiremos este valor ao indicar um Aplicativo para você testar. Um App fantástico.</span></p><p><br></p><p>Basicamente seguirá estes passos:</p><p><br></p><p>1° &nbsp;Passo: Você se cadastra nos botões QUERO PARTICIPAR</p><p>2° Passo: Você irá passar por uma triagem de informações via Email e Site e Grupos Whatsapp</p><p>3° Passo: Baixar um Aplicativo para receber as suas doações diretamente ao você</p><p>4° Passo: Doar 10 REAIS para pessoa da vez, e entrar na lista de espera para receber doações também</p><p>5° Passo: Verificar periódicamente e confirmar o recebimento das suas doações</p><p>6° Passo: Repetir o ciclo quantas vezes quizer</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Serão 6 fases disponíveis para você receber doações.</p><p>Inicalmente você &nbsp;irá doar 10,00 reais e entrara na fila na primeira fase, e ganhará uma doação superior a 8.000,00 reais ao finalizar a fase de número 6.&nbsp;<span style="font-size: 1.07rem; line-height: 1.5;">Inicialmente vamos te ajudar com 9,00 reais para que você faça sua primeira doação no valor de 10,00 reais (esse valor que iremos te ajudar é por tempo limitado), pois conseguiremos este valor ao indicar um Aplicativo para você testar. Um App fantástico.</span></p><p><br></p><p>Basicamente seguirá estes passos:</p><p><br></p><p>1° &nbsp;Passo: Você se cadastra nos botões QUERO PARTICIPAR;</p><p>2° Passo: Você irá passar por uma triagem de informações via Email e Site e Grupos Whatsapp;</p><p>3° Passo: Baixar um Aplicativo para receber as suas doações diretamente a você;</p><p>4° Passo: Doar 10 REAIS para pessoa da vez, e entrar na lista de espera para receber doações também;</p><p>5° Passo: Verificar periódicamente e confirmar o recebimento das suas doações;</p><p>6° Passo: Repetir o ciclo quantas vezes quizer;</p></blockquote></div>
         </div>
     </div>
 
